implement leader selection and re-selection

--- a/.env
+++ b/.env
@@ -1,7 +1,12 @@
-ORDER_HOST=my_order
-CATALOG_HOST=my_catalog
-FRONTEND_HOST=my_frontend
-ORDER_LISTENING_PORT=8088
-CATALOG_LISTENING_PORT=8087
-FRONTEND_LISTENING_PORT=8080
+ORDER_HOST=0.0.0.0
+CATALOG_HOST=0.0.0.0
+FRONTEND_HOST=0.0.0.0
+ORDER_REQUEST_PORT3=16008
+ORDER_REQUEST_PORT2=16007
+ORDER_REQUEST_PORT1=16006
+ORDER_SOCKET_PORT3=16018
+ORDER_SOCKET_PORT2=16017
+ORDER_SOCKET_PORT1=16016
+CATALOG_PORT=8087
+FRONTEND_PORT=8080
 OUTPUT_DIR=/data
