add docker compose

--- a/.env
+++ b/.env
@@ -1,12 +1,26 @@
-ORDER_HOST=0.0.0.0
-CATALOG_HOST=0.0.0.0
-FRONTEND_HOST=0.0.0.0
-ORDER_REQUEST_PORT3=16008
-ORDER_REQUEST_PORT2=16007
-ORDER_REQUEST_PORT1=16006
-ORDER_SOCKET_PORT3=16018
-ORDER_SOCKET_PORT2=16017
-ORDER_SOCKET_PORT1=16016
+CATALOG_HOST=my_catalog
 CATALOG_PORT=8087
+
+ORDER_HOST3=my_order3
+ORDER_PORT3=16008
+ORDER_LEADER_BROADCAST_PORT3=16018
+ORDER_HEALTH_CHECK_PORT3=16028
+
+ORDER_HOST2=my_order2
+ORDER_PORT2=16007
+ORDER_LEADER_BROADCAST_PORT2=16017
+ORDER_HEALTH_CHECK_PORT2=16027
+
+ORDER_HOST1=my_order1
+ORDER_PORT1=16006
+ORDER_LEADER_BROADCAST_PORT1=16016
+ORDER_HEALTH_CHECK_PORT1=16026
+
+FRONTEND_HOST=my_frontend
 FRONTEND_PORT=8080
+
 OUTPUT_DIR=/data
+HEALTH_CHECK_INTERVAL=0.5
+CACHE_SIZE=5
+CACHE_LOG_PATH=/data/log.json
+
