--- a/src/config.yaml
+++ b/src/config.yaml
@@ -16,3 +16,6 @@ FRONTEND_HOST: 0.0.0.0
 FRONTEND_PORT: 8080
 OUTPUT_DIR: ./data
 HEALTH_CHECK_INTERVAL: 0.5
+CACHE_SIZE: 5
+CACHE_LOG_PATH: ./data/log.json
+
