--- a/src/config.yaml
+++ b/src/config.yaml
@@ -1,21 +1,36 @@
+# Catalog
 CATALOG_HOST: 0.0.0.0
 CATALOG_PORT: 8087
+
+# Order ID3
 ORDER_HOST3: 0.0.0.0
 ORDER_PORT3: 16008
 ORDER_LEADER_BROADCAST_PORT3: 16018
 ORDER_HEALTH_CHECK_PORT3: 16028
+
+# Order ID2
 ORDER_HOST2: 0.0.0.0
 ORDER_PORT2: 16007
 ORDER_LEADER_BROADCAST_PORT2: 16017
 ORDER_HEALTH_CHECK_PORT2: 16027
+
+# Order ID1
 ORDER_HOST1: 0.0.0.0
 ORDER_PORT1: 16006
 ORDER_LEADER_BROADCAST_PORT1: 16016
 ORDER_HEALTH_CHECK_PORT1: 16026
+
+# Front-end
 FRONTEND_HOST: 0.0.0.0
 FRONTEND_PORT: 8080
-OUTPUT_DIR: ./data
 HEALTH_CHECK_INTERVAL: 0.5
+CACHE: True
+DUMP: False
 CACHE_SIZE: 5
 CACHE_LOG_PATH: ./data/log.json
+
+# Output Directory
+OUTPUT_DIR: ./data
+
+
 
